# gauss_gym

./: .dockerignore  .gitignore  README.md  environment.yml  pyproject.toml  setup.py  setup_dev.sh  source_common.sh  source_dev_setup.sh  wandb_cleanup.py
assets/policies/: simple_gru_policy.pt
deployment/a1/: README.md  a1_real.py  a1_ros_run.py  a1_ros_runtest.py  a1_visual_embedding.py  deploy_a1.py  deploy_a1_excitement.py  deploy_a1_vision.py
deployment/t1/: t1_deploy.py
docker/: Dockerfile  build.sh  run.sh
gauss_gym/: __init__.py
gauss_gym/envs/: __init__.py
gauss_gym/rl/: deployment_runner.py  deployment_runner_onnx.py  experience_buffer.py  loss.py  recorder.py  runner.py  utils.py
gauss_gym/scripts/: MUJOCO_LOG.TXT  deploy_a1_visual.py  deploy_t1.py  export_onnx.py  export_torchscript.py  export_wormhole.py  play.py  play_mujoco.py  train.py  wandb_cleanup.py
gauss_gym/tests/: gamepad_test.py  test_augmentation.py  test_bezier.py  test_conv_decoder.py  test_heightmap_to_voxel.py  test_hf.py  test_mesh.py  test_reporter.py  test_scene_ingest.py  test_server.py  test_timm.py  test_tolerance_reward.py  test_trajectory_padding.py  test_twohot.py
gauss_gym/utils/: __init__.py  agg.py  batch_gs_renderer.py  client_utils.py  config.py  debug.py  flags.py  gaussian_terrain.py  helpers.py  hf_utils.py  math_utils.py  mesh_utils.py  observation_groups.py  observation_manager.py  observations.py  path.py  printing.py  s3_utils.py  scene_ingest.py  sensors.py  server_utils.py  space.py  symmetry_groups.py  task_registry.py  timer.py  viser_visualizer.py  visualization.py  visualization_geometries.py  voxel.py  wandb.py  warp_utils.py  when.py  wrappers.py
gaussian_splatting/: arkit_scenes.sh  grand_tour_release.yaml  grandslam_get_subset.py  grandslam_scenes.sh  nerfstudio_convert.py  polycam_scenes.sh  uli_scenes.sh
legged_gym/: __init__.py
legged_gym/envs/: __init__.py
legged_gym/rl/: deployment_runner.py  deployment_runner_onnx.py  loss.py  (+5 more)
mesh_generation/: generate_mesh_slices.py  requirements.txt
rendering/: batch_gs_renderer.py
scene_generation/: generate_mesh_slices.py  hole_filling.py
tests/: gamepad_test.py
(+179 files in other folders)
