[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauss_gym"
version = "1.0.0"
requires-python = ">=3.8,<3.9"
description = "Photorealistic Isaac Gym Environments"
authors = [{ name = "Alejandro Escontrela", email = "escontrela@berkeley.edu" }]
license = { text = "BSD-3-Clause" }
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaug==0.6.1",
    "huggingface_hub==0.34.4",
    "isaacgym",
    "viser==1.0.0",
    "plotly==6.2.0",
    "warp-lang==1.7.1",
    "ruamel.yaml==0.18.12",
    "wandb[media]==0.19.8",
    "plyfile==1.0.3",
    "jaxtyping==0.2.19",
    "timm==1.0.19",
    "matplotlib==3.7.5",
    "yourdfpy==0.0.58",
    "shapely==2.0.7",
    "trimesh[recommend]==4.7.4",
    "scipy==1.10.1",
    "einops==0.8.0",
    "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git",
    "tensorflow-cpu==2.11.* ; platform_machine == 'x86_64' and python_version < '3.11'",
    "tdigest",
    "msgpack",
    "fastapi[standard]",
    "pydantic",
    "uvicorn",
    "onnx",
    "onnxruntime"
]

[tool.setuptools]
packages = ["gauss_gym", "deployment"]

# Tell uv where "isaacgym" comes from (local path) and to install it editable
[tool.uv.sources]
isaacgym = { path = "isaacgym/python", editable = true }

[tool.uv.extra-build-dependencies]
gsplat = ["torch==2.4.1"]

[project.scripts]
wandb_cleanup = "gauss_gym.scripts.wandb_cleanup:main"
gauss_train = "gauss_gym.scripts.train:main"
gauss_play = "gauss_gym.scripts.play:main"
onnx_convert = "gauss_gym.scripts.export_onnx:main"

[tool.ruff]
line-length = 88
respect-gitignore = false
indent-width = 2
extend-exclude = ["isaacgym"]

[tool.ruff.lint]
# Do NOT include "I" in select; or just keep your existing select and:
ignore = ["I"]                # no import sorting
unfixable = ["F401"]          # don't auto-delete unused imports

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["gauss_gym"]
split-on-trailing-comma = false

[tool.ruff.format]
indent-style = "space"
quote-style = "single"